--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">pokemon</string>
-    <string name="title_activity_main_activity">MainActivity</string>
+    <string name="app_name">Pokemon</string>
+    <string name="title_activity_main_activity">Pokemon</string>
 
     <string name="next">Next</string>
     <string name="previous">Previous</string>
