add page detail with databinding

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,9 @@
     <string name="pokemon_detail">Pokemon List</string>
 
 
+    <!--Pokemon detail page  -->
+    <string name="label_height">Height:</string>
+    <string name="label_base_experience">Base Experience:</string>
+    <string name="label_weight">Weight:</string>
 
 </resources>
