--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="label_height">Height:</string>
     <string name="label_base_experience">Base Experience:</string>
     <string name="label_weight">Weight:</string>
+    <string name="label_stats">Stats:</string>
+
 
 </resources>
